Add styles to family photo

--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,13 @@ button:hover, button:focus,
     margin: 0 auto;
 }
 
+.family__portrait {
+    float: left;
+    margin-right: 40px;
+    width: 250px;
+    border-radius: 50%;
+}
+
 .balloon {
     display: flex;
     justify-content: center;
