--- a/css/styles.css
+++ b/css/styles.css
@@ -154,7 +154,7 @@ button:hover, button:focus,
     margin: 0 auto;
 }
 
-.family__portrait {
+.about-me__portrait {
     float: left;
     margin-right: 40px;
     width: 250px;
