--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 /* Color Palette
 --tomato: #F56551;
 --glaucous: #7180ac;
@@ -68,6 +75,8 @@ button {
     margin: 20px;
     border-radius: 3px;
     border-bottom: 2px solid rgba(195, 213, 205, 0.3);
+    -webkit-transition: opacity 0.5s;
+    -o-transition: opacity 0.5s;
     transition: opacity 0.5s;
 }
 
@@ -85,6 +94,8 @@ button {
     margin: 20px;
     border-radius: 3px;
     border-bottom: 2px solid rgba(195, 213, 205, 0.3);
+    -webkit-transition: opacity 0.5s;
+    -o-transition: opacity 0.5s;
     transition: opacity 0.5s;
 }
 
@@ -115,10 +126,22 @@ button:hover, button:focus,
 }
 
 .navigation-list__item:hover {
-    animation: navigation-animation 0.8s linear forwards;
+    -webkit-animation: navigation-animation 0.8s linear forwards;
+            animation: navigation-animation 0.8s linear forwards;
 }
 
 /* navigation border */
+@-webkit-keyframes navigation-animation {
+    from {
+        border: 2px solid transparent;
+        padding: 3px;
+    }
+    to {
+        border: solid 2px;
+        border-color: #7180ac;
+        padding: 3px;
+    }
+}
 @keyframes navigation-animation {
     from {
         border: 2px solid transparent;
@@ -132,7 +155,8 @@ button:hover, button:focus,
 }
 
 * {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 .profile__portrait {
@@ -144,8 +168,13 @@ button:hover, button:focus,
 
 .page-footer {
     clear: both;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     text-align: center;
 }
 
@@ -167,28 +196,52 @@ button:hover, button:focus,
 }
 
 .balloon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    display: block;
+    margin-left: 150px;
+  }
+  
+  .work-experience {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      text-align: center;
+  }
 
 .page-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 100%;
     padding: 20px;
 }
 
 .page-header__item {
-    flex: 0 1 200px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 200px;
+            flex: 0 1 200px;
 }
 
 .page-header .page-header__item:last-child {
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
     text-align: right;
 }
 
 .project-grid {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
     margin: 20px;
@@ -197,8 +250,14 @@ button:hover, button:focus,
 .project-grid__item {
     background-color: #a8d0db;
     padding: 20px;
-    transition-duration: 0.5s;
+    -webkit-transition-duration: 0.5s;
+         -o-transition-duration: 0.5s;
+            transition-duration: 0.5s;
+    -webkit-transition-property: color;
+    -o-transition-property: color;
     transition-property: color;
+    -webkit-transition-property: background-color;
+    -o-transition-property: background-color;
     transition-property: background-color;
 }
 
@@ -225,12 +284,14 @@ button:hover, button:focus,
 
 @media all and (max-width: 500px) {
     .project-grid {
+        -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     }
 }
 
 @media all and (min-width: 500px) and (max-width: 750px) {
     .project-grid {
+        -ms-grid-columns: 1fr 20px 1fr;
         grid-template-columns: 1fr 1fr;
     }
 }
@@ -248,6 +309,18 @@ button:hover, button:focus,
     }
 }
 
+@-webkit-keyframes cloud-change {
+    0% {
+        fill: #edc655;
+    }
+    50% {
+        fill: #f76414;
+    }
+    100% {
+        fill: #9400D3;
+    }
+}
+
 @keyframes cloud-change {
     0% {
         fill: #edc655;
@@ -260,26 +333,50 @@ button:hover, button:focus,
     }
 }
 
-@keyframes cloud-move {
+@-webkit-keyframes cloud-move {
     0% {
-        transform: scale(25%);
+        -webkit-transform: scale(25%);
+                transform: scale(25%);
     }
     50% {
-        transform: scale(50%);
+        -webkit-transform: scale(50%);
+                transform: scale(50%);
     }
     100% {
-        transform: scale(75%);
+        -webkit-transform: scale(75%);
+                transform: scale(75%);
+    }
+}
+
+@keyframes cloud-move {
+    0% {
+        -webkit-transform: scale(25%);
+                transform: scale(25%);
+    }
+    50% {
+        -webkit-transform: scale(50%);
+                transform: scale(50%);
+    }
+    100% {
+        -webkit-transform: scale(75%);
+                transform: scale(75%);
     }
 }
 
 .cloud-right {
-    animation: 4s cloud-change infinite alternate linear;
+    -webkit-animation: 4s cloud-change infinite alternate linear;
+            animation: 4s cloud-change infinite alternate linear;
 }
 
 .cloud-left {
-    animation-name: cloud-change, cloud-move;
-    animation-duration: 4s, 8s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-timing-function: linear;
+    -webkit-animation-name: cloud-change, cloud-move;
+            animation-name: cloud-change, cloud-move;
+    -webkit-animation-duration: 4s, 8s;
+            animation-duration: 4s, 8s;
+    -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+            animation-direction: alternate;
+    -webkit-animation-timing-function: linear;
+            animation-timing-function: linear;
 }
