--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,7 @@ table, th, td {
 
 .project-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
     margin: 20px;
 }
@@ -232,6 +232,11 @@ table, th, td {
 .project-grid__item:hover a:active {
     color: var(--tomato);
 }
+
+.project-grid__item-photo {
+    width: 100%;
+    height: 225px;
+  }
 
 .work-header {
     text-align: center;
