--- a/css/styles.css
+++ b/css/styles.css
@@ -234,8 +234,8 @@ table, th, td {
 }
 
 .project-grid__item-photo {
-    width: 100%;
-    height: 225px;
+    width: 350px;
+    height: auto;
   }
 
 .work-header {
