Update display and margin for project photos

--- a/css/styles.css
+++ b/css/styles.css
@@ -234,6 +234,8 @@ table, th, td {
 }
 
 .project-grid__item-photo {
+    display: block;
+    margin: 0 auto;
     width: 350px;
     height: auto;
   }
