--- a/css/style.production.css
+++ b/css/style.production.css
@@ -291,6 +291,8 @@ table, th, td {
 }
 
 .project-grid__item-photo {
+    display: block;
+    margin: 0 auto;
     width: 350px;
     height: auto;
   }
