--- a/css/style.production.css
+++ b/css/style.production.css
@@ -256,7 +256,7 @@ table, th, td {
     -ms-grid-columns: 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
-    margin: 20px;
+    margin: 20px 100px;
 }
 
 .project-grid__item {
