--- a/css/styles.css
+++ b/css/styles.css
@@ -205,7 +205,7 @@ table, th, td {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
-    margin: 20px;
+    margin: 20px 100px;
 }
 
 .project-grid__item {
