Change list style for hobbies
Add class name to hobbies list on About page and adjust css to remove bullets

--- a/css/styles.css
+++ b/css/styles.css
@@ -161,6 +161,10 @@ button:hover, button:focus,
     border-radius: 50%;
 }
 
+.hobbies-list {
+    list-style: none;
+}
+
 table, th, td {
     text-align: center;
     padding: 15px;
