--- a/css/style.production.css
+++ b/css/style.production.css
@@ -195,6 +195,10 @@ button:hover, button:focus,
     border-radius: 50%;
 }
 
+.hobbies-list {
+    list-style: none;
+}
+
 table, th, td {
     text-align: center;
     padding: 15px;
@@ -415,4 +419,18 @@ table, th, td {
             animation-direction: alternate;
     -webkit-animation-timing-function: linear;
             animation-timing-function: linear;
+}
+.example {
+    display: -ms-grid;
+    display: grid;
+    -webkit-transition: all .5s;
+    -o-transition: all .5s;
+    transition: all .5s;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    background: -webkit-gradient(linear, left top, left bottom, from(white), to(black));
+    background: -o-linear-gradient(top, white, black);
+    background: linear-gradient(to bottom, white, black);
 }
