Adjust margin for balloon SVG

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -213,7 +213,7 @@ table, th, td {
 
 .balloon {
     display: block;
-    margin-left: 150px;
+    margin-right: 25px;
   }
   
 .work-experience {
