--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 /* Color Palette
 --tomato: #F56551;
 --glaucous: #7180ac;
@@ -7,22 +14,11 @@
 https://coolors.co/f56551-7180ac-223759-a8d0db-c3d5cd
 */
 
-:root {
-    --primary-color: #223759;
-    --secondary-color:  #7180ac;
-    --tertiary-color: #FFF8DC;
-    --ash-gray: #C3D5CD;
-    --tomato: #F56551;
-    --light-blue: #a8d0db;
-    --white: #FFFFFF;
-    --header-weight: 600;
-}
-
 body {
-    background-color: var(--ash-gray);
+    background-color: #C3D5CD;
 
     font-family: 'Inter', sans-serif; /* Use Inter font if available, sans-serif if not */
-    color: var(--primary-color);
+    color: #223759;
     font-weight: 400;
     font-size: 16px;
     /* sets font size in body to 16px */
@@ -31,27 +27,27 @@ body {
 }
 
 h1 {
-    font-weight: var(--header-weight);
+    font-weight: 600;
     font-size: 30px;
 }
 
 h2 {
-    font-weight: var(--header-weight);
+    font-weight: 600;
     font-size: 24px;
 }
 
 h3 {
-    font-weight: var(--header-weight);
+    font-weight: 600;
     font-size: 18px;
 }
 
 a {
-    color: var(--primary-color);
+    color: #223759;
 }
 
 a:visited {
     /* visited link */
-    color: var(--secondary-color);
+    color: #7180ac;
 }
 
 a:hover, a:focus {
@@ -62,24 +58,44 @@ a:hover, a:focus {
 
 a:active {
     /* selected link */
-    color: var(--tomato);
+    color: #F56551;
 }
 
-button,
-.button {
+button {
     border: none;
     /* overwrites browser default and resets the border */
     display: inline-block;
     font-family: inherit;
     /* inherits the font family from the outer container, like the body */
-    background-color: var(--primary-color);
-    color: var(--white);
+    background-color: #223759;
+    color: #FFFFFF;
     text-decoration: none;
     padding: 10px;
     /* adds spacing around the text within the button */
     margin: 20px;
     border-radius: 3px;
     border-bottom: 2px solid rgba(195, 213, 205, 0.3);
+    -webkit-transition: opacity 0.5s;
+    -o-transition: opacity 0.5s;
+    transition: opacity 0.5s;
+}
+
+.button {
+    border: none;
+    /* overwrites browser default and resets the border */
+    display: inline-block;
+    font-family: inherit;
+    /* inherits the font family from the outer container, like the body */
+    background-color: #223759;
+    color: #FFFFFF;
+    text-decoration: none;
+    padding: 10px;
+    /* adds spacing around the text within the button */
+    margin: 20px;
+    border-radius: 3px;
+    border-bottom: 2px solid rgba(195, 213, 205, 0.3);
+    -webkit-transition: opacity 0.5s;
+    -o-transition: opacity 0.5s;
     transition: opacity 0.5s;
 }
 
@@ -110,10 +126,22 @@ button:hover, button:focus,
 }
 
 .navigation-list__item:hover {
-    animation: navigation-animation 0.8s linear forwards;
+    -webkit-animation: navigation-animation 0.8s linear forwards;
+            animation: navigation-animation 0.8s linear forwards;
 }
 
 /* navigation border */
+@-webkit-keyframes navigation-animation {
+    from {
+        border: 2px solid transparent;
+        padding: 3px;
+    }
+    to {
+        border: solid 2px;
+        border-color: #7180ac;
+        padding: 3px;
+    }
+}
 @keyframes navigation-animation {
     from {
         border: 2px solid transparent;
@@ -121,13 +149,14 @@ button:hover, button:focus,
     }
     to {
         border: solid 2px;
-        border-color: var(--secondary-color);
+        border-color: #7180ac;
         padding: 3px;
     }
 }
 
 * {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 .profile__portrait {
@@ -139,8 +168,13 @@ button:hover, button:focus,
 
 .page-footer {
     clear: both;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     text-align: center;
 }
 
@@ -170,71 +204,94 @@ table, th, td {
     padding: 15px;
   }
   
-  tr:nth-child(even) {background-color: var(--light-blue);}
+  tr:nth-child(even) {background-color: #a8d0db;}
   
   th {
-    background-color: var(--secondary-color);
+    background-color: #7180ac;
     color: white;
   }
 
 .balloon {
     display: block;
-    margin-left: 150px;
+    margin-right: 25px;
   }
   
 .work-experience {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
       text-align: center;
   }
 
 .page-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 100%;
     padding: 20px;
 }
 
 .page-header__item {
-    flex: 0 1 200px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 200px;
+            flex: 0 1 200px;
 }
 
 .page-header .page-header__item:last-child {
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
     text-align: right;
 }
 
 .project-grid {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
     margin: 20px 100px;
 }
 
 .project-grid__item {
-    background-color: var(--light-blue);
+    background-color: #a8d0db;
     padding: 20px;
-    transition-duration: 0.5s;
+    -webkit-transition-duration: 0.5s;
+         -o-transition-duration: 0.5s;
+            transition-duration: 0.5s;
+    -webkit-transition-property: color;
+    -o-transition-property: color;
     transition-property: color;
+    -webkit-transition-property: background-color;
+    -o-transition-property: background-color;
     transition-property: background-color;
 }
 
 .project-grid__item:hover {
-    background-color: var(--secondary-color);
-    color: var(--tertiary-color);
+    background-color: #7180ac;
+    color: #FFF8DC;
 }
 
 .project-grid__item a:visited {
-    color: var(--primary-color);
+    color: #223759;
 }
 
 .project-grid__item:hover a {
-    color: var(--tertiary-color);
+    color: #FFF8DC;
 }
 
 .project-grid__item:hover a:active {
-    color: var(--tomato);
+    color: #F56551;
 }
 
 .project-grid__item-photo {
@@ -250,8 +307,13 @@ table, th, td {
 
 .contact-details {
     clear: both;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     text-align: center;
 }
 
@@ -262,12 +324,14 @@ table, th, td {
 
 @media all and (max-width: 500px) {
     .project-grid {
+        -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     }
 }
 
 @media all and (min-width: 500px) and (max-width: 750px) {
     .project-grid {
+        -ms-grid-columns: 1fr 20px 1fr;
         grid-template-columns: 1fr 1fr;
     }
 }
@@ -285,6 +349,18 @@ table, th, td {
     }
 }
 
+@-webkit-keyframes cloud-change {
+    0% {
+        fill: #edc655;
+    }
+    50% {
+        fill: #f76414;
+    }
+    100% {
+        fill: #9400D3;
+    }
+}
+
 @keyframes cloud-change {
     0% {
         fill: #edc655;
@@ -297,26 +373,50 @@ table, th, td {
     }
 }
 
-@keyframes cloud-move {
+@-webkit-keyframes cloud-move {
     0% {
-        transform: scale(25%);
+        -webkit-transform: scale(25%);
+                transform: scale(25%);
     }
     50% {
-        transform: scale(50%);
+        -webkit-transform: scale(50%);
+                transform: scale(50%);
     }
     100% {
-        transform: scale(75%);
+        -webkit-transform: scale(75%);
+                transform: scale(75%);
+    }
+}
+
+@keyframes cloud-move {
+    0% {
+        -webkit-transform: scale(25%);
+                transform: scale(25%);
+    }
+    50% {
+        -webkit-transform: scale(50%);
+                transform: scale(50%);
+    }
+    100% {
+        -webkit-transform: scale(75%);
+                transform: scale(75%);
     }
 }
 
 .cloud-right {
-    animation: 4s cloud-change infinite alternate linear;
+    -webkit-animation: 4s cloud-change infinite alternate linear;
+            animation: 4s cloud-change infinite alternate linear;
 }
 
 .cloud-left {
-    animation-name: cloud-change, cloud-move;
-    animation-duration: 4s, 8s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-timing-function: linear;
+    -webkit-animation-name: cloud-change, cloud-move;
+            animation-name: cloud-change, cloud-move;
+    -webkit-animation-duration: 4s, 8s;
+            animation-duration: 4s, 8s;
+    -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+            animation-direction: alternate;
+    -webkit-animation-timing-function: linear;
+            animation-timing-function: linear;
 }
