--- a/css/styles.css
+++ b/css/styles.css
@@ -303,16 +303,8 @@ table, th, td {
     text-align: center;
 }
 
-.contact-details {
-    clear: both;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    text-align: center;
+.contact-header {
+    margin: 20px auto;
 }
 
 .contact-details__icon {
@@ -323,7 +315,7 @@ table, th, td {
 .contact-form {
     display: grid;
     place-items: center;
-    margin: 20px 0;
+    margin: 30px 0;
 }
 
 form {
