--- a/css/style.production.css
+++ b/css/style.production.css
@@ -187,7 +187,7 @@ button:hover, button:focus,
 
 .profile {
     max-width: 700px;
-    margin: 0 auto;
+    margin: 30px auto;
 }
 
 .about-me {
@@ -240,7 +240,20 @@ table, th, td {
       text-align: center;
   }
 
-.page-header {
+  .navbar-brand {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 20px;
+    font-family: 'Inter', sans-serif; /* Use Inter font if available, sans-serif if not */
+    font-weight: 600;
+    font-size: 30px; 
+  }
+
+/* .page-header {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -259,7 +272,7 @@ table, th, td {
         -ms-flex-positive: 1;
             flex-grow: 1;
     text-align: right;
-}
+} */
 
 .project-grid {
     display: -ms-grid;
