--- a/css/style.production.css
+++ b/css/style.production.css
@@ -319,7 +319,11 @@ table, th, td {
     margin: 0 auto;
     width: 80%;
     height: auto;
-  }
+}
+
+.project-grid__item h2 {
+    margin-top: 40px;
+}
 
 .work-header, .contact-header {
     text-align: center;
