--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body {
     font-weight: 400;
     font-size: 16px;
     /* sets font size in body to 16px */
-    line-height: 1.2;
+    line-height: 1.5;
     /* sets line height to 1.2x the size of the font */
 }
 
@@ -161,7 +161,7 @@ button:hover, button:focus,
 }
 
 .profile__portrait {
-    float: left;
+    float: right;
     margin-right: 40px;
     width: 250px;
     border-radius: 50%;
