--- a/css/style.production.css
+++ b/css/style.production.css
@@ -169,7 +169,7 @@ button:hover, button:focus,
 
 .profile__portrait {
     float: right;
-    margin-right: 40px;
+    margin: 20px;
     width: 250px;
     border-radius: 50%;
 }
