--- a/css/styles.css
+++ b/css/styles.css
@@ -179,6 +179,10 @@ button:hover, button:focus,
     text-align: center;
 }
 
+.social-media img {
+    margin: 10px;
+}
+
 .profile {
     max-width: 700px;
     margin: 30px auto;
