Adjust header margins on all pages

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -191,13 +191,13 @@ button:hover, button:focus,
 }
 
 .profile {
-    max-width: 700px;
+    max-width: 65%;
     margin: 30px auto;
 }
 
 .about-me {
-    max-width: 700px;
-    margin: 0 auto;
+    max-width: 65%;
+    margin: 30px auto;
 }
 
 .about-me__portrait {
@@ -331,10 +331,7 @@ table, th, td {
 
 .work-header, .contact-header {
     text-align: center;
-}
-
-.contact-header {
-    margin: 20px auto;
+    margin: 30px auto;
 }
 
 .contact-details__icon {
