Add text to work page intro and add styles for it

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -279,6 +279,11 @@ table, th, td {
     text-align: right;
 } */
 
+.work-intro {
+    text-align: center;
+    margin: auto 20px;
+}
+
 .project-grid {
     display: -ms-grid;
     display: grid;
