--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,11 @@ table, th, td {
     text-align: right;
 } */
 
+.work-intro {
+    text-align: center;
+    margin: auto 20px;
+}
+
 .project-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
@@ -320,10 +325,6 @@ table, th, td {
 .work-header, .contact-header {
     text-align: center;
     margin: 30px auto;
-}
-
-.contact-header {
-    margin: 20px auto;
 }
 
 .contact-details__icon {
