Adjust responsive sizing for homepage headshot

--- a/css/styles-new.css
+++ b/css/styles-new.css
@@ -342,6 +342,11 @@
         width: 50%;
         height: auto;
     }
+
+    .headshot {
+        width: 50%;
+        height: auto;
+    }
       
     .contact-card__details {
         padding: 15px;
